Updated project links

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="topic">E-Commerce Store</div>
             <p>An e-commerce site with cart, payment, and CRUD features.</p>
           </a>
-          <a href="#" class="box">
+          <a href="https://aadarsh-frontend-developer.vercel.app/" class="box">
             <div class="icon">
               <img
                 src="Images/Screenshot 2024-07-13 222344.jpg"
@@ -208,11 +208,10 @@
                 style="width: 100%; height: auto"
               />
             </div>
-            <div class="topic">Natours</div>
+            <div class="topic">Food Menu App</div>
             <p>
-              A tours website showcasing immersive eco-adventures, crafted with
-              SASS CSS and HTML for stunning, responsive design and dynamic
-              content presentation.
+              A responsive React-based food menu application that allows users
+              to browse and filter meals from different cuisines.
             </p>
           </a>
         </div>
