--- a/index.html
+++ b/index.html
@@ -171,7 +171,11 @@
       <div class="content">
         <div class="title"><span>My Projects</span></div>
         <div class="boxes">
-          <a href="https://ytclone.onrender.com/" target="_blank" class="box">
+          <a
+            href="https://biotech-frontend.vercel.app/"
+            target="_blank"
+            class="box"
+          >
             <div class="icon">
               <img
                 src="Images/Screenshot 2024-07-13 222344.jpg"
@@ -179,10 +183,10 @@
                 style="width: 100%; height: auto"
               />
             </div>
-            <div class="topic">YouTube Clone</div>
+            <div class="topic">Job Portal</div>
             <p>
-              A YouTube clone using ReactJS, enabling users to search and watch
-              videos.
+              Responsive full-stack job portal with comprehensive CRUD
+              functionality for efficient job management.
             </p>
           </a>
           <a
